--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -1,4 +1,6 @@
 - name: Controller
+  CountDefault: 1
+  HostnameFormatDefault: '%stackname%-controller-%index%'
   ServicesDefault:
     - OS::TripleO::Services::CACerts
     - OS::TripleO::Services::CephMon
@@ -69,6 +71,8 @@
     - OS::TripleO::Services::VipHosts
 
 - name: Compute
+  CountDefault: 1
+  HostnameFormatDefault: '%stackname%-novacompute-%index%'
   ServicesDefault:
     - OS::TripleO::Services::CACerts
     - OS::TripleO::Services::CephClient
@@ -92,6 +96,8 @@
     - OS::TripleO::Services::VipHosts
 
 - name: BlockStorage
+  CountDefault: 0
+  HostnameFormatDefault: '%stackname%-blockstorage-%index%'
   ServicesDefault:
     - OS::TripleO::Services::CACerts
     - OS::TripleO::Services::CinderVolume
@@ -105,6 +111,8 @@
     - OS::TripleO::Services::VipHosts
 
 - name: ObjectStorage
+  CountDefault: 0
+  HostnameFormatDefault: '%stackname%-objectstorage-%index%'
   ServicesDefault:
     - OS::TripleO::Services::CACerts
     - OS::TripleO::Services::Kernel
@@ -119,6 +127,8 @@
     - OS::TripleO::Services::VipHosts
 
 - name: CephStorage
+  CountDefault: 0
+  HostnameFormatDefault: '%stackname%-cephstorage-%index%'
   ServicesDefault:
     - OS::TripleO::Services::CACerts
     - OS::TripleO::Services::CephOSD
