Add VIP names to allNodesConfig
The nodes need to be aware of the fqdn's for the specific endpoints
in the cloud. This could be either to set the entries in /etc/hosts
or to select an appropriate hostname for a certificate to be
generated.

bp tls-via-certmonger

Change-Id: I9b4645b937a344f46ec18a9a68c5afa2bc5206d0

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -656,6 +656,11 @@ resources:
   allNodesConfig:
     type: OS::TripleO::AllNodes::SoftwareConfig
     properties:
+      cloud_name_external: {get_param: CloudName}
+      cloud_name_internal_api: {get_param: CloudNameInternal}
+      cloud_name_storage: {get_param: CloudNameStorage}
+      cloud_name_storage_mgmt: {get_param: CloudNameStorageManagement}
+      cloud_name_management: {get_param: CloudNameManagement}
       hosts:
         - list_join:
             - '\n'
