--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -2,6 +2,16 @@ heat_template_version: 2016-10-14
 description: 'All Nodes Config for Puppet'
 
 parameters:
+  cloud_name_external:
+    type: string
+  cloud_name_internal_api:
+    type: string
+  cloud_name_storage:
+    type: string
+  cloud_name_storage_mgmt:
+    type: string
+  cloud_name_management:
+    type: string
   hosts:
     type: comma_delimited_list
   # FIXME(shardy) this can be comma_delimited_list when
@@ -168,6 +178,11 @@ resources:
                     tripleo::keepalived::storage_mgmt_virtual_ip: {get_param: [NetVipMap, storage_mgmt]}
                     tripleo::keepalived::redis_virtual_ip: {get_param: RedisVirtualIP}
                     tripleo::redis_notification::haproxy_monitor_ip: {get_param: [NetVipMap, ctlplane]}
+                    cloud_name_external: {get_param: cloud_name_external}
+                    cloud_name_internal_api: {get_param: cloud_name_internal_api}
+                    cloud_name_storage: {get_param: cloud_name_storage}
+                    cloud_name_storage_mgmt: {get_param: cloud_name_storage_mgmt}
+                    cloud_name_management: {get_param: cloud_name_management}
 
 outputs:
   config_id:
