Add bootstrap_node and vip_data to hierarchy for all roles
We recently made changes that add data to allNodesConfig, but
we didn't wire the files into the hierarchy on all roles.

Change-Id: I8e838b02bd982e600af54b14350106322244890a
Closes-Bug: #1620485

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -248,7 +248,9 @@ resources:
             - extraconfig
             - service_names
             - service_configs
+            - bootstrap_node # provided by allNodesConfig
             - all_nodes # provided by allNodesConfig
+            - vip_data # provided by allNodesConfig
             - '"%{::osfamily}"'
           merge_behavior: deeper
           datafiles:
