--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -244,7 +244,9 @@ resources:
             - service_names
             - service_configs
             - volume
+            - bootstrap_node # provided by allNodesConfig
             - all_nodes # provided by allNodesConfig
+            - vip_data # provided by allNodesConfig
             - '"%{::osfamily}"'
           merge_behavior: deeper
           datafiles:
