--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -261,7 +261,9 @@ resources:
             - service_names
             - service_configs
             - compute
+            - bootstrap_node # provided by allNodesConfig
             - all_nodes # provided by allNodesConfig
+            - vip_data # provided by allNodesConfig
             - '"%{::osfamily}"'
             - neutron_bigswitch_data # Optionally provided by ComputeExtraConfigPre
             - cisco_n1kv_data  # Optionally provided by ComputeExtraConfigPre
