--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -238,7 +238,9 @@ resources:
             - service_configs
             - object
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
+            - bootstrap_node # provided by allNodesConfig
             - all_nodes # provided by allNodesConfig
+            - vip_data # provided by allNodesConfig
             - '"%{::osfamily}"'
           merge_behavior: deeper
           datafiles:
