--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -314,7 +314,7 @@ resources:
             - service_names
             - controller
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
-            - bootstrap_node # provided by BootstrapNodeConfig
+            - bootstrap_node # provided by allNodesConfig
             - all_nodes # provided by allNodesConfig
             - vip_data # provided by allNodesConfig
             - '"%{::osfamily}"'
