Set Redis VIP on all nodes
Move Redis VIP from controller-only to all nodes so that we don't assume
where Redis is deployed.

Change-Id: I55f8d48e3e077951fbcc88158dd6f21a2fe5f457
Related-Bug: #1618510
Partially-Implements: blueprint custom-roles

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -24,6 +24,9 @@ parameters:
     type: comma_delimited_list
   NetVipMap:
     type: json
+  RedisVirtualIP:
+    type: string
+    default: ''
   ServiceNetMap:
     type: json
   DeployIdentifier:
@@ -153,6 +156,7 @@ resources:
                     internal_api_virtual_ip: {get_param: [NetVipMap, internal_api]}
                     storage_virtual_ip: {get_param: [NetVipMap, storage]}
                     storage_mgmt_virtual_ip: {get_param: [NetVipMap, storage_mgmt]}
+                    redis_vip: {get_param: RedisVirtualIP}
                     # public_virtual_ip and controller_virtual_ip are needed in
                     # both HAproxy & keepalived.
                     tripleo::haproxy::public_virtual_ip: {get_param: [NetVipMap, external]}
