Use Redis VIP when deploying with keepalived
Previously we weren't creating Redis VIP in keepalived, causing Redis to
be unusable in non-HA deployments. This is now fixed.

Depends-On: I0bb37f6fb3eed022288b2dcfc7a88e8ff88a7ace
Change-Id: I0ecfda1e6ad5567f6f58d60bf418bc91761833ab
Closes-Bug: #1618510

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -166,6 +166,7 @@ resources:
                     tripleo::keepalived::internal_api_virtual_ip: {get_param: [NetVipMap, internal_api]}
                     tripleo::keepalived::storage_virtual_ip: {get_param: [NetVipMap, storage]}
                     tripleo::keepalived::storage_mgmt_virtual_ip: {get_param: [NetVipMap, storage_mgmt]}
+                    tripleo::keepalived::redis_virtual_ip: {get_param: RedisVirtualIP}
                     tripleo::redis_notification::haproxy_monitor_ip: {get_param: [NetVipMap, ctlplane]}
 
 outputs:
