Update OpenContrail loadbalancer plugin value
Update OpenContrail loadbalancer plugin value to match with Newton
changes.

Closes-Bug: #1620657
Change-Id: I48f1884b95e590c0588c52419ec152bd08bc3992

--- a/environments/neutron-opencontrail.yaml
+++ b/environments/neutron-opencontrail.yaml
@@ -13,7 +13,7 @@ resource_registry:
 
 parameter_defaults:
   NeutronCorePlugin: neutron_plugin_contrail.plugins.opencontrail.contrail_plugin.NeutronPluginContrailCoreV2
-  NeutronServicePlugins: neutron_plugin_contrail.plugins.opencontrail.loadbalancer.plugin.LoadBalancerPlugin
+  NeutronServicePlugins: neutron_plugin_contrail.plugins.opencontrail.loadbalancer.v2.plugin.LoadBalancerPluginV2
   NeutronTunnelTypes: ''
 
   # required params:
