Update OpenContrail loadbalancer plugin value
Update OpenContrail loadbalancer plugin value to match with Newton
changes.

Closes-Bug: #1620657
Change-Id: I48f1884b95e590c0588c52419ec152bd08bc3992
(cherry-picked from commit 00180e8087b10de29cfda4904b3eea3cb5b54f8f)

--- a/environments/neutron-opencontrail.yaml
+++ b/environments/neutron-opencontrail.yaml
@@ -6,7 +6,7 @@ resource_registry:
 
 parameter_defaults:
   NeutronCorePlugin: neutron_plugin_contrail.plugins.opencontrail.contrail_plugin.NeutronPluginContrailCoreV2
-  NeutronServicePlugins: neutron_plugin_contrail.plugins.opencontrail.loadbalancer.plugin.LoadBalancerPlugin
+  NeutronServicePlugins: neutron_plugin_contrail.plugins.opencontrail.loadbalancer.v2.plugin.LoadBalancerPluginV2
   NeutronEnableDHCPAgent: false
   NeutronEnableL3Agent: false
   NeutronEnableMetadataAgent: false
