Fix service config files having wrong map_merge format
map_merge in heat templates should start with hypen for
each map group, few templates are missing the hypen for the
second map group, which is added in this patch

Closes-Bug: #1621008
Change-Id: I307fdd7afc374cce46d6e378594f1b688b9fd4f6

--- a/puppet/services/neutron-api.yaml
+++ b/puppet/services/neutron-api.yaml
@@ -75,7 +75,7 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
-            neutron::server::database_connection:
+          - neutron::server::database_connection:
               list_join:
                 - ''
                 - - {get_param: [EndpointMap, MysqlInternal, protocol]}
