--- a/puppet/services/neutron-ovs-dpdk-agent.yaml
+++ b/puppet/services/neutron-ovs-dpdk-agent.yaml
@@ -65,7 +65,7 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [NeutronOvsAgent, role_data, config_settings]
-            neutron::agents::ml2::ovs::enable_dpdk: true
+          - neutron::agents::ml2::ovs::enable_dpdk: true
             neutron::agents::ml2::ovs::datapath_type: {get_param: NeutronDatapathType}
             neutron::agents::ml2::ovs::vhostuser_socket_dir: {get_param: NeutronVhostuserSocketDir}
             vswitch::dpdk::core_list: {get_param: NeutronDpdkCoreList}
