Make Nova VNC Proxy service name match service net map
If these names don't match then we cannot set the service's nodes,
VIP and network.

Change-Id: I8f1c0eaf62eee2704a5f2556a553032106db606b
Closes-Bug: #1621368

--- a/puppet/services/nova-vnc-proxy.yaml
+++ b/puppet/services/nova-vnc-proxy.yaml
@@ -34,7 +34,7 @@ outputs:
   role_data:
     description: Role data for the Nova Vncproxy service.
     value:
-      service_name: nova_vncproxy
+      service_name: nova_vnc_proxy
       monitoring_subscription: {get_param: MonitoringSubscriptionNovaVNCProxy}
       config_settings:
         map_merge:
