--- a/puppet/services/pacemaker/nova-vnc-proxy.yaml
+++ b/puppet/services/pacemaker/nova-vnc-proxy.yaml
@@ -22,7 +22,7 @@ parameters:
 resources:
 
   NovaVncproxyBase:
-    type: ../nova-vncproxy.yaml
+    type: ../nova-vnc-proxy.yaml
     properties:
       ServiceNetMap: {get_param: ServiceNetMap}
       DefaultPasswords: {get_param: DefaultPasswords}
@@ -32,7 +32,7 @@ outputs:
   role_data:
     description: Role data for the Nova Vncproxy role.
     value:
-      service_name: nova_vncproxy
+      service_name: nova_vnc_proxy
       monitoring_subscription: {get_attr: [NovaVncproxyBase, role_data, monitoring_subscription]}
       config_settings:
         map_merge:
