Add Heat's Cfn and Cloudwatch networks to ServiceNetMap
these are needed if we want to be able to generate which nodes the
service and which VIP are they binding to.

Change-Id: I9d40459406f15db3ad9229c75392c4d959d44b3b
Closes-Bug: #1621371

--- a/network/service_net_map.yaml
+++ b/network/service_net_map.yaml
@@ -30,6 +30,8 @@ parameters:
       ManilaApiNetwork: internal_api
       NeutronApiNetwork: internal_api
       HeatApiNetwork: internal_api
+      HeatApiCfnNetwork: internal_api
+      HeatApiCloudwatchNetwork: internal_api
       NovaApiNetwork: internal_api
       NovaMetadataNetwork: internal_api
       NovaVncProxyNetwork: internal_api
