Convert UpdateWorkflow to support composable roles
We need to remove the hard-coded roles from overcloud.j2.yaml
as now it's valid to e.g remove BlockStorage completely.

The previous behavior for the per-role upgrade scripts is maintained
but we'll need to rework this for newton->ocata upgrades where we
can no longer be sure the servers mapping will contain all roles.

Change-Id: I25e6c84757e3c00fba2aae834cd8206c62e44acf
Partially-Implements: blueprint custom-roles

--- a/extraconfig/tasks/major_upgrade_pacemaker.yaml
+++ b/extraconfig/tasks/major_upgrade_pacemaker.yaml
@@ -2,15 +2,7 @@ heat_template_version: 2014-10-16
 description: 'Upgrade for Pacemaker deployments'
 
 parameters:
-  controller_servers:
-    type: json
-  compute_servers:
-    type: json
-  blockstorage_servers:
-    type: json
-  objectstorage_servers:
-    type: json
-  cephstorage_servers:
+  servers:
     type: json
   input_values:
     type: json
@@ -54,7 +46,7 @@ resources:
   CephMonUpgradeDeployment:
     type: OS::Heat::SoftwareDeploymentGroup
     properties:
-      servers: {get_param: controller_servers}
+      servers: {get_param: servers, Controller}
       config: {get_resource: CephMonUpgradeConfig}
       input_values: {get_param: input_values}
       batch_create:
@@ -89,7 +81,7 @@ resources:
     type: OS::Heat::SoftwareDeploymentGroup
     depends_on: CephMonUpgradeDeployment
     properties:
-      servers:  {get_param: controller_servers}
+      servers:  {get_param: servers, Controller}
       config: {get_resource: ControllerPacemakerUpgradeConfig_Step1}
       input_values: {get_param: input_values}
 
@@ -103,7 +95,7 @@ resources:
   BlockStorageUpgradeDeployment:
     type: OS::Heat::SoftwareDeploymentGroup
     properties:
-      servers:  {get_param: blockstorage_servers}
+      servers:  {get_param: servers, BlockStorage}
       config: {get_resource: BlockStorageUpgradeConfig}
       input_values: {get_param: input_values}
 
@@ -122,7 +114,7 @@ resources:
     type: OS::Heat::SoftwareDeploymentGroup
     depends_on: BlockStorageUpgradeDeployment
     properties:
-      servers:  {get_param: controller_servers}
+      servers:  {get_param: servers, Controller}
       config: {get_resource: ControllerPacemakerUpgradeConfig_Step2}
       input_values: {get_param: input_values}
 
